deployment/scrumlr-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumlr-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumlr-frontend
  template:
    metadata:
      labels: 
        app: scrumlr-frontend
    spec:
      containers:
        - name: scrumlr-frontend
          image: scrumlr-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - name: frontend-http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: frontend-http
            initialDelaySeconds: 240
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1 
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: frontend-http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1 
            failureThreshold: 5
      restartPolicy: Always
