deployment/scrumlr-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumlr-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: scrumlr-frontend
